# TimberGPT

./: .gitignore  README.md
backend/: .env.example  Makefile  pyproject.toml
backend/datasets/: dataset1.txt
backend/src/: main.py
backend/src/core/: config.py
backend/src/enums/: __init__.py  enums.py
backend/src/features/: __init__.py
backend/src/features/gpt/: gpt_core.py  gpt_prompts.py  gpt_router.py  gpt_schemas.py
backend/src/features/image_process/: api.py  ring_count_api.py
backend/src/features/user/: user_router.py  user_schemas.py  user_services.py
backend/src/models/: user_models.py
backend/src/schemas/: __init__.py  global_schemas.py
backend/src/security/: oauth2.py
frontend/components/ai_tool/chatting/: AIChatting.jsx  ChatHeader.jsx  ChatMessage.jsx  ChatSidebar.jsx  ImageAnalysisReport.jsx  ImageUploadForm.jsx  LoadingSpinner.jsx  Typewriter.jsx
frontend/styles/: markdown-table.css
