[project]
name = "timber-gpt"
version = "1.0.0"
description = "An AI assistant specialized in answering timber-related questions."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.8",
    "langchain>=0.3.26",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.10.1",
    "pydantic[email,timezone]>=2.11.7",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
    "chromadb>=1.0.15",
    "ipykernel>=6.30.0",
    "inference-sdk>=0.51.7",
]
